--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -196,7 +196,7 @@
 
 #datepicker-controls select{
   width: 100px;
-  height: 22px;
+  height: 26px;
 }
 
 #datepicker-controls input.date{
@@ -217,10 +217,7 @@
   display: none;
 }
 
-.btn-group .btn.rate{
-  width: 40px;
-}
-
 #chart {
-  height: 160px;
+  height: 240px;
+  width: 100%;
 }
