--- a/app/views/reports/_show.haml
+++ b/app/views/reports/_show.haml
@@ -9,7 +9,7 @@
   .row-fluid
     %hr
     .btn-group
-      %a.btn{:href => "#"}
+      %a.btn{:href => "#/segments/"}
         %i.icon-user
         用户群
       - if not @report.project_id.nil?
@@ -17,6 +17,8 @@
           %i.icon-edit
           编辑报告
   .row-fluid
+    .te#segment_list{:style=>'display:block;'}
+      =render :partial=>'segments/segments'
     %br
     %input#report_tab_id{:type => "hidden", :value => "#{@report_tab.id}"}
     %ul.nav.nav-tabs
@@ -37,6 +39,7 @@
 :javascript
   var project = new Analytics.Models.Project(#{@project.attributes.to_json})
   var report = reports_router.report(#{(@report.attributes).merge({:report_tab => @report_tab.js_attributes}).to_json});
+  var segments_router = new Analytics.Routers.SegmentsRouter([]);
 
 :css
   .left{
