add loading message and fix some bug

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -20,6 +20,7 @@
   %body
     #loader-message{:style => "display: none"}
       %img{:src => "/assets/ajax-loader.gif"}
+    #loading-message{:style => "display: none"} 载入中...
     .container-fluid
       .row-fluid
         .subnav
