--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -6,7 +6,7 @@
       %h2 暂无数据
       %p 强大的自定义报告功能可以让你获得最为精准的游戏数据，快去创建第一份报告吧
       %p
-        %a.btn.btn-primary.btn-large{:href => new_project_report_path(@project)}
+        %a.btn.btn-primary.btn-large{:href => "#/reports/new"}
           %i.icon-plus.icon-white
           创建报告
 - else
