change blockUI & fix bug for metric form

--- a/app/views/segments/_common.html.haml
+++ b/app/views/segments/_common.html.haml
@@ -21,6 +21,6 @@
 :javascript
   $(function(){
    $("#segment_console").click(function(){
-    $("#segment_list").html('');
+    $("#segment_list").hide();
    })
   })
