--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -19,7 +19,8 @@
       
   %body
     #loader-message{:style => "display: none"}
-      %img{:src => "/assets/ajax-loader.gif"}
+      .progress.progress-striped.active
+        .bar{:style => "width: 100%;"}
     #loading-message{:style => "display: none"} 载入中...
     .container-fluid
       .row-fluid
