change cancel in report edit for history.back()

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -29,7 +29,7 @@
             %li.span2
               %a{:href => "#"} &nbsp;
             %li
-              %a{:href => project_path(@project)}
+              %a{:href => "#"}
                 %i.icon-home
                 首页
             %li
