--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -18,30 +18,34 @@
     = yield :head
       
   %body
-    #loader-message{:style => "display: none"}
-      .progress.progress-striped.active
-        .bar{:style => "width: 100%;"}
-    #loading-message{:style => "display: none"} 载入中...
     .container-fluid
       .row-fluid
-        .subnav
-          %ul.nav.nav-pills
-            %li.span2
-              %a{:href => "#"} &nbsp;
-            %li
-              %a{:href => "#"}
-                %i.icon-home
-                首页
-            %li
-              %a{:href => "#/reports"}
-                %i.icon-cog
-                报告管理
-        #container.row-fluid{:style => "padding-top: 10px;"}
+        .navbar
+          .navbar-inner#analytics-navbar
+            .container
+              %a.brand.span2{:href => "#"}
+                = @project.name
+              .nav-collapse
+                %ul.nav
+                  %li
+                    %a{:href => "#"}
+                      %i.icon-home
+                      首页
+                  %li
+                    %a{:href => "#/reports"}
+                      %i.icon-cog
+                      报告管理
+        #container.row-fluid
           = yield
 
       
       %footer
         %p &copy; XingCloud 2012
+
+    #loader-message{:style => "display: none"}
+      .progress.progress-striped.active
+        .bar{:style => "width: 100%;"}
+    #loading-message{:style => "display: none"} 载入中...
 
     /
       Le javascript
@@ -51,8 +55,3 @@
 :javascript
   var project = new Analytics.Models.Project(#{@project.attributes.to_json});
   Backbone.history.start();
-
-:css
-  body {
-    padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-  }
