--- a/app/assets/javascripts/backbone/templates/report_tabs/edit_body.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/report_tabs/edit_body.jst.ejs
@@ -12,7 +12,7 @@
         <input id="report_report_tabs_attributes_<%= model.get('index') %>_chart_type" name="report[report_tabs_attributes][<%= model.get('index') %>][chart_type]" type="hidden" value="<%= model.get('chart_type') %>" />
         <div class="btn-group">
             <button id="report_tab_type<%= model.get('index') %>_line" class="<%= model.get('chart_type') == 'line' ? 'active btn type-btn' : 'btn type-btn' %>" value="line" href="">线状图</button>
-            <button id="report_tab_type<%= model.get('index') %>_bar" class="<%= model.get('chart_type') == 'bar' ? 'active btn type-btn' : 'btn type-btn' %>" value="bar" href="">柱状图</button>
+            <button id="report_tab_type<%= model.get('index') %>_column" class="<%= model.get('chart_type') == 'column' ? 'active btn type-btn' : 'btn type-btn' %>" value="column" href="">柱状图</button>
         </div>
     </div>
 </div>
