fix bug for cancel create segment in template admin

--- a/app/views/segments/_common.html.haml
+++ b/app/views/segments/_common.html.haml
@@ -21,6 +21,12 @@
 :javascript
   $(function(){
    $("#segment_console").click(function(){
-    $("#segment_list").hide();
+    if(typeof(project) == "undefined"){
+      history.back();
+    }
+    else {
+      $("#segment_list").hide();
+    }
+
    })
   })
