--- a/app/views/segments/_list.html.haml
+++ b/app/views/segments/_list.html.haml
@@ -1,5 +1,3 @@
--title '通用用户群管理'
-
 .span2
   - if not @project.nil?
     = render "projects/left_nav"
@@ -23,7 +21,7 @@
           %td= segment.created_at.strftime('%Y-%m-%d %H:%M:%S')
           %td
             %li{:class => "icon-edit"}
-            = link_to_edit "#/segments/#{segment.id}/edit"
+            %a{:href => "#/segments/#{segment.id}/edit"} 编辑
             %li{:class => "icon-trash"}
             %a{:href => "#/segments/#{segment.id}/delete"} 删除
 
