add loading message to admin

--- a/app/views/layouts/admin.haml
+++ b/app/views/layouts/admin.haml
@@ -20,6 +20,7 @@
     
       %footer
         %p &copy; Company 2012
+    #loading-message{:style => "display: none"} 载入中...
     /
       Le javascript
       \==================================================
