--- a/app/views/template/projects/index.haml
+++ b/app/views/template/projects/index.haml
@@ -1,16 +1,20 @@
-.span2
-  = render "admin/projects/left_nav"
+%h3 项目列表
+%hr
+%table.table.table-striped.table-bordered.table-condensed
+  %thead
+    %th 项目
+    %th 标示符
+  %tbody
+    - @projects.each do |project|
+      %tr
+        %td= link_to project.name, project_path(project)
+        %td= project.identifier
+= will_paginate @projects
 
-.span10
-  %h3 项目列表
-  %hr
-  %table.table.table-striped.table-bordered.table-condensed
-    %thead
-      %th 项目
-      %th 标示符
-    %tbody
-      - @projects.each do |project|
-        %tr
-          %td= link_to project.name, project_path(project)
-          %td= project.identifier
-  = will_paginate @projects
+:javascript
+  window.reports_router = new Analytics.Routers.ReportsRouter({project: null, reports: #{Report.template.map(&:js_attributes).to_json}, categories: #{ReportCategory.template.map(&:js_attributes).to_json}});
+  window.report_categories_router = new Analytics.Routers.ReportCategoriesRouter({});
+  window.metrics_router = new Analytics.Routers.MetricsRouter({metrics: #{Metric.template.map(&:short_attributes).to_json}});
+  window.report_tabs_router = new Analytics.Routers.ReportTabsRouter({});
+  window.segments_router = new Analytics.Routers.SegmentsRouter({});
+  Backbone.history.start();
