--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -147,3 +147,106 @@
   height: 240px;
   width: 100%;
 }
+
+
+
+//dimension css follow
+.dimension_add {
+  border-collapse: collapse;
+  border: 1px dashed;
+  border-radius: 3px 3px 3px 3px;
+  cursor: pointer;
+  float: left;
+  font-size: 13px;
+  font-weight: bold;
+  height: 16px;
+  margin: 3px 10px 3px 0;
+  padding: 5px;
+  text-align: center;
+  width: 196px;
+  -moz-border-radius: 3px 3px 3px 3px;
+  -webkit-border-top-left-radius: 3px;
+  -webkit-border-top-right-radius: 3px;
+  -webkit-border-bottom-left-radius: 3px;
+  -webkit-border-bottom-right-radius: 3px;
+
+  background: #F2F6FF;
+  border-color: #7B98E8;
+  color: #7B98E8;
+
+  visibility: visible;
+}
+
+
+.dimension_display {
+
+  background: transparent url(/assets/menu_down_light.gif) no-repeat scroll 95% 50%;
+  border-radius: 3px 3px 3px 3px;
+  border-style: solid;
+  border-width: 1px;
+  color: white;
+  cursor: pointer;
+  font-weight: bold;
+  float: left;
+  height: 26px;
+  margin: 3px 10px 3px 0;
+  padding: 0;
+  -moz-border-radius: 3px 3px 3px 3px;
+  -webkit-border-top-left-radius: 3px;
+  -webkit-border-top-right-radius: 3px;
+  -webkit-border-bottom-left-radius: 3px;
+  -webkit-border-bottom-right-radius: 3px;
+  white-space: nowrap;
+  width: 206px;
+
+  background-color: RGB(157,182,117);
+  border-color: #51649E;
+  text-align: center;
+}
+
+.dimension_del {
+  background: no-repeat url(/assets/sprites.png) -527px -173px;
+  cursor: pointer;
+  float: left;
+  height: 12px;
+  margin: 3px 1px;
+  margin-left: -7px;
+  margin-top: 11px;
+  width: 12px;
+  @include google;
+}
+.dimension_picker {
+  float: left;
+  width: 224px;
+  @include div_form;
+}
+
+.dimension_select{
+
+  float: left;
+  height: 26px;
+
+  width: 206px;
+
+  background-color: RGB(157,182,117);
+  border-color: #51649E;
+  text-align: center;
+}
+.chzn-container{
+  background: transparent url(/assets/menu_down_light.gif) no-repeat scroll 95% 50%;
+  border-radius: 3px 3px 3px 3px;
+  border-width: 1px;
+  cursor: pointer;
+  font-weight: bold;
+  float: left;
+  height: 26px;
+  margin: 3px 10px 3px 0;
+  padding: 0;
+  -moz-border-radius: 3px 3px 3px 3px;
+  -webkit-border-top-left-radius: 3px;
+  -webkit-border-top-right-radius: 3px;
+  -webkit-border-bottom-left-radius: 3px;
+  -webkit-border-bottom-right-radius: 3px;
+  white-space: nowrap;
+  width: 206px;
+}
