--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,55 +13,7 @@
  *= require jquery.ui
  *= require jquery.chosen
  *= require datepicker
+ *= require projects
  *= require segments
  *= require reports
 */
-
-body {
-    padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-}
-
-#analytics-navbar .brand{
-    color: black;
-    text-align: center;
-}
-
-#analytics-navbar{
-    background-color: #EEE;
-    background-repeat: repeat-x;
-    background-image: -moz-linear-gradient(top, whiteSmoke 0%, #EEE 100%);
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,whiteSmoke), color-stop(100%,#EEE));
-    background-image: -webkit-linear-gradient(top, whiteSmoke 0%,#EEE 100%);
-    background-image: -ms-linear-gradient(top, whiteSmoke 0%,#EEE 100%);
-    background-image: -o-linear-gradient(top, whiteSmoke 0%,#EEE 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#eeeeee',GradientType=0 );
-    background-image: linear-gradient(top, whiteSmoke 0%,#EEE 100%);
-    border: 1px solid #E5E5E5;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-}
-
-#analytics-navbar li a.hover{
-    color: #005580;
-}
-
-#analytics-navbar li a{
-    color: #08C;
-    text-shadow: 0 0 0 rgba(0, 0, 0, 0);
-}
-
-.left{
-    float: left;
-}
-.right{
-    float: right;
-}
-
-#report-header{
-    padding-bottom: 5px
-}
-
-#report-tabs{
-    padding-top: 5px;
-}
