--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -47,11 +47,14 @@ table.main-table{
         ul li.custom-report{
           padding-left: 5px;
         }
+        ul{
+          border-bottom: 1px solid #CCC;
+        }
       }
     }
 
     .reports-controls{
-      margin-top: 5px;
+      margin-bottom: 10px;
       text-align: center;
       border-top: 1px solid #CCC;
       .report-control{
@@ -80,7 +83,7 @@ table.main-table{
     -webkit-transition: background-color .20s linear;
     transition: background-color .20s linear;
   }
-  td.nav-toggle.left-nav-hide{
+  td.nav-toggle.hide{
     cursor: e-resize;
     padding-left: 5px;
   }
