--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -48,6 +48,9 @@ table.main-table{
         margin-top: 10px;
         .custom-reports-header{
           @include report-category-header;
+          font-size: 11px;
+          font-weight: bold;
+          color: #999;
         }
         ul li.custom-report{
           padding-left: 5px;
