--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -53,7 +53,7 @@ table.main-table{
           color: #999;
         }
         ul li.custom-report{
-          padding-left: 5px;
+          padding: 5px 5px 5px 10px;
         }
         ul{
           border-bottom: 1px solid #CCC;
