--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -51,9 +51,10 @@ table.main-table{
           font-size: 11px;
           font-weight: bold;
           color: #999;
+          padding: 5px 5px 5px 10px;
         }
         ul li.custom-report{
-          padding: 5px 5px 5px 10px;
+          padding-left: 5px;
         }
         ul{
           border-bottom: 1px solid #CCC;
