--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -4,12 +4,96 @@
 
 
 
-#report-header{
-  padding-bottom: 5px
+.report-header{
+  padding-bottom: 5px;
+  .report-info{
+    padding: 10px 0 0 10px;
+    min-height: 18px;
+  }
 }
 
-#report-tabs{
+.report-tabs{
   padding-top: 5px;
+}
+
+.report-tab-controls{
+  .dimensions-filters{
+    table{
+      td{
+        padding-left: 5px;
+        a{
+          cursor: pointer;
+        }
+      }
+    }
+  }
+  .range-control{
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    width: 280px;
+    min-height: 38px;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+    border: 1px solid #CCC;
+    border-radius: 5px 5px 5px 5px;
+    table{
+      width: 260px;
+      td{
+        height: 38px;
+        text-align: center;
+        font-size: 10px;
+        span{
+          font-size: 10px;
+          text-align: center;
+        }
+        div.info{
+          line-height: 10px;
+          font-size: 6px;
+        }
+      }
+
+    }
+    a{
+      color:#B2B2B2;
+      background-color:#F7F7F7;
+      text-align:center;
+      display: block;
+      position: absolute;
+      width: 25px;
+      min-height: 36px;
+      top: 0;
+      right: 0;
+      text-decoration: none;
+      padding-top: 10px;
+      border-radius: 0 5px 5px 0;
+    }
+  }
+  .range-control-dropdown-menu{
+    width: 295px;
+    li.compare{
+      padding: 3px 15px;
+      input{
+        float: left;
+      }
+      label{
+        padding-left: 5px;
+        cursor: pointer;
+        float: left;
+      }
+      span.range{
+        border: 1px dashed #7B98E8;
+        border-radius: 3px;
+        -moz-border-radius: 3px;
+        -webkit-border-radius: 3px;
+        padding: 4px;
+        margin: 0 4px 0 4px;
+      }
+      span.range:hover{
+        background-color: #e6e6e6;
+      }
+    }
+  }
 }
 
 @mixin loading{
@@ -410,9 +494,14 @@
   }
 }
 
-.dimensions-breadcrumb{
-  ul li a.dimension-choose{
-    cursor: pointer;
+.dimensions-list{
+  table{
+    td{
+      padding-right: 5px;
+      a{
+        cursor: pointer;
+      }
+    }
   }
 }
 
@@ -423,6 +512,15 @@
   }
   td.no-data{
     text-align: center;
+  }
+  td.no-dimension{
+    text-align: center;
+    div.add-dimension-controls{
+      margin-top: 10px;
+      select{
+        margin-bottom: 0px !important;
+      }
+    }
   }
   td a.dimension-value{
     cursor: pointer;
