--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -44,8 +44,10 @@
         text-align: center;
         font-size: 10px;
         span{
-          font-size: 10px;
           text-align: center;
+        }
+        div.info{
+          line-height: 10px;
         }
       }
 
