--- a/app/views/layouts/admin.haml
+++ b/app/views/layouts/admin.haml
@@ -4,6 +4,8 @@
     %meta{:charset => "utf-8"}/
     %title= content_for?(:title) ? yield(:title) : "XingCloud Analytic"
     = csrf_meta_tags
+
+    = favicon_link_tag '/favicon.png', :type => 'image/png'
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
       = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
