--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,6 +6,7 @@
     
     = csrf_meta_tags
     
+    = favicon_link_tag '/favicon.png', :type => 'image/png'
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
       = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
