get user attributes from remote host and set user attributes type right

--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -1,4 +1,6 @@
 :javascript
+  Analytics.Static.initUserAttributes(#{@user_attributes.to_json});
+
   window.project = new Analytics.Models.Project(#{@project.js_attributes.to_json});
   window.projects_router = new Analytics.Routers.ProjectsRouter();
 
