--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -27,10 +27,13 @@
       }
     }
   }
+}
+
+.report-tab-range-picker{
   .range-control{
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
-    width: 280px;
+    width: 250px;
     min-height: 38px;
     overflow: hidden;
     position: relative;
@@ -38,16 +41,15 @@
     border: 1px solid #CCC;
     border-radius: 5px 5px 5px 5px;
     table{
-      width: 260px;
+      width: 230px;
       td{
         height: 38px;
         text-align: center;
-        font-size: 10px;
         span{
           text-align: center;
         }
-        div.info{
-          line-height: 10px;
+        div.compare-info{
+          line-height: 12px;
         }
       }
 
@@ -68,7 +70,7 @@
     }
   }
   .range-control-dropdown-menu{
-    width: 295px;
+    width: 265px;
     li.compare{
       padding: 3px 15px;
       input{
