fix bug for authenticate

--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -487,6 +487,10 @@
     }
     td.add-dimension{
       padding-left: 10px;
+      ul{
+        max-height: 200px;
+        overflow: auto;
+      }
     }
   }
 }
