add segment support for dimension table

--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -550,4 +550,10 @@
       cursor: pointer;
     }
   }
+  label{
+    line-height: 30px;
+  }
+  .dimensions-control{
+    margin-left: 5px;
+  }
 }
