change dimension segment dropdown menu to dropup && add cursor:pointer to dimension segment dropdown menu && fix infinite bug for pagesize

--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -540,6 +540,9 @@
   select.pagesize{
     width: 60px;
   }
+  a.choose-segment{
+    cursor: pointer;
+  }
   ul.pager{
     a.disabled{
       color: #999;
