--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -68,14 +68,14 @@
   }
   .range-control-dropdown-menu{
     min-width: 250px;
-    li.compare{
+    li.range-datepicker{
       padding: 3px 15px;
+      cursor: pointer;
       input{
         float: left;
       }
       label{
         padding-left: 5px;
-        cursor: pointer;
         float: left;
       }
       span.range{
