--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -138,3 +138,9 @@ table.main-table{
   right: 0;
   z-index: 1000;
 }
+
+.footer{
+  text-align: center;
+  padding: 10px;
+  border-top: 1px solid #CCC;
+}
